Who you gonna call? CHEST-BURSTERS!

--- a/Languages/English/Keyed/Keys.xml
+++ b/Languages/English/Keyed/Keys.xml
@@ -30,4 +30,20 @@ Insector colonists that will be affected:
 	<VRE_Genelines>Genelines</VRE_Genelines>
 	<VRE_GenelinesDesc>text.todo</VRE_GenelinesDesc>
 	<VRE_MetapodTimer>Time until {PAWN_nameDef} emerges: {1}</VRE_MetapodTimer>
+	
+	
+	<VRE_ChestburstPregnancyReady>Chestburst pregnancy</VRE_ChestburstPregnancyReady>
+	<VRE_ChestburstPregnancyReadyDesc>When a colonist with chestburst pregnancy gene becomes pregnant, they need to designate another willing or unwilling individual to implant the fetus. Once the fetus matures, it will burst out of the ribcage of the victim, killing the host. If they don’t do it before the second trimester begins (6 days), the pregnancy will be terminated.</VRE_ChestburstPregnancyReadyDesc>
+	
+	<VRE_ChestburstImplantationNeeded>Chestburst implantation needed</VRE_ChestburstImplantationNeeded>
+	<VRE_ChestburstImplantationNeededDesc>When a colonist with chestburst pregnancy gene becomes pregnant, they need to designate another willing or unwilling individual to implant the fetus. Once the fetus matures, it will burst out of the ribcage of the victim, killing the host. If they don’t do it before the second trimester begins (6 days), the pregnancy will be terminated. These colonists need to implant a fetus:\n\n{0}</VRE_ChestburstImplantationNeededDesc>
+	
+	<VRE_InjectChestburstFetus>Inject chestburst fetus</VRE_InjectChestburstFetus>
+	<VRE_InjectChestburstFetusDesc> Inject the victim with the fetus, which will burst out of the victim’s chest when mature, killing the host.</VRE_InjectChestburstFetusDesc>
+	
+	<VRE_NeedsHumanoid>Needs to be injected on a humanoid target</VRE_NeedsHumanoid>
+	
+	<VRE_ChestburstBirthLabel>Chestburst birth</VRE_ChestburstBirthLabel>
+	<VRE_ChestburstBirth>A newborn, {0}, has hatched from a host, killing it in the process</VRE_ChestburstBirth>
+	
 </LanguageData>
