--- a/Languages/English/Keyed/Keys.xml
+++ b/Languages/English/Keyed/Keys.xml
@@ -50,5 +50,6 @@ Insector colonists that will be affected:
 	<VRE_OnlyOnSelf>Parthenogenesis can only be targeted on self</VRE_OnlyOnSelf>
 	<VRE_AlreadyPregnant>Individual is already pregnant</VRE_AlreadyPregnant>
 	<VRE_GotPregnant>{0} has self-impregnated!</VRE_GotPregnant>
+	<VRE_PawnIsTooYoung>{0} is too young!</VRE_PawnIsTooYoung>
 	
 </LanguageData>
