--- a/Languages/English/Keyed/Keys.xml
+++ b/Languages/English/Keyed/Keys.xml
@@ -38,6 +38,7 @@ Insector colonists that will be affected:
 	<VRE_InjectChestburstFetusDesc> Inject the victim with the fetus, which will burst out of the victim’s chest when mature, killing the host.</VRE_InjectChestburstFetusDesc>
 	
 	<VRE_NeedsHumanoidOrAnimal>Needs to be injected on a humanoid target or adult animal with body size higher than 1</VRE_NeedsHumanoidOrAnimal>
+	<VRE_CantImplantOnGhoul>Can't be injected on ghouls</VRE_CantImplantOnGhoul>
 	
 	<VRE_ChestburstBirthLabel>Chestburst birth</VRE_ChestburstBirthLabel>
 	<VRE_ChestburstBirth>A newborn, {0}, has hatched from a host, killing it in the process</VRE_ChestburstBirth>
